--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   },
   "dependencies": {
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.4.2",
+    "@capacitor/camera": "^5.0.7",
+    "@capacitor/core": "^5.4.2",
+    "@capacitor/filesystem": "^5.1.4",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@codetrix-studio/capacitor-google-auth": "^3.3.2",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
+    "@ionic/storage": "^4.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "firebase": "^10.4.0",
@@ -27,9 +30,11 @@
     "mobx-react": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-calendar-api": "^2.3.0",
     "react-redux": "^8.1.3",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "@ionic/cli": "7.1.1"
   },
   "devDependencies": {
     "@capacitor/cli": "5.4.2",
